<resources>
    <string name="app_name">EPG</string>
    <string name="channel_list_name">Channel Name</string>
    <string name="str_loading_title">Loading data ...</string>
    <string name="str_bottom_record">Record</string>
    <string name="str_bottom_reminder">Remind</string>
    <string name="str_bottom_playing">Playing</string>
    <string name="str_bottom_recording">Recorded</string>
    <string name="str_bottom_reminding">Reminder</string>
    <string name="str_pick_title">Record</string>
    <string name="str_pick_month">Mon</string>
    <string name="str_pick_day">Day</string>
    <string name="str_pick_hour">Hour</string>
    <string name="str_pick_minute">Min</string>
    <string name="str_pick_confirm">Press OK to confirm</string>
    <string name="str_pick_cancel">Canceled!</string>
    <string name="str_pick_success">Success!</string>
    <string name="str_pick_max">Requested add of schedule exceeds maximum allowed!</string>
    <string name="str_pick_past">Past!</string>
    <string name="str_pick_fail">Fail !</string>
    <string name="str_pick_insert_usb">Disk Not Ready!Please insert USB device!</string>
    <string name="str_main_no_data">No Program data,can not record</string>
    <string name="str_pick_start_time_error">Start time error ! The time now is before current time</string>
    <string name="str_pick_start_time_conflict">Time Conflict !</string>
    <string name="str_pick_end_time_error">End time error ! The time now is after end time</string>
    <string name="epg_bottom_prev_day">Previous Day</string>
    <string name="epg_bottom_next_day">Next Day</string>
    <string name="epg_bottom_view_detail">View Detail</string>
    <string name="epg_bottom_type_filter">Type Filter</string>
    <string name="epg_bottom_prev_page">Page Up</string>
    <string name="epg_bottom_next_page">Page Down</string>
    <string name="epg_bottom_ENTER">ENTER</string>
    <string name="epg_bottom_0">0</string>
    <string name="epg_rating_unclassified">Unclassified</string>
    <string name="epg_info_program_type">None</string>
    <string name="epg_password">Password</string>
    <string name="epg_password_message">Password is wrong</string>
    <string name="epg_retrieving_show">Retrieving Data...</string>
    <string name="nav_epg_January">January</string>
    <string name="nav_epg_February">February</string>
    <string name="nav_epg_March">March</string>
    <string name="nav_epg_April">April</string>
    <string name="nav_epg_May">May</string>
    <string name="nav_epg_June">June</string>
    <string name="nav_epg_July">July</string>
    <string name="nav_epg_August">August</string>
    <string name="nav_epg_September">September</string>
    <string name="nav_epg_October">October</string>
    <string name="nav_epg_November">November</string>
    <string name="nav_epg_December">December</string>
    <string name="nav_epg_Jan">Jan</string>
    <string name="nav_epg_Feb">Feb</string>
    <string name="nav_epg_Mar">Mar</string>
    <string name="nav_epg_Apr">Apr</string>
    <string name="nav_epg_may">May</string>
    <string name="nav_epg_Jun">Jun</string>
    <string name="nav_epg_Jul">Jul</string>
    <string name="nav_epg_Aug">Aug</string>
    <string name="nav_epg_Sep">Sep</string>
    <string name="nav_epg_Oct">Oct</string>
    <string name="nav_epg_Nov">Nov</string>
    <string name="nav_epg_Dec">Dec</string>
    <string name="nav_epg_Sunday">Sunday</string>
    <string name="nav_epg_Monday">Monday</string>
    <string name="nav_epg_Tuesday">Tuesday</string>
    <string name="nav_epg_Wednesday">Wednesday</string>
    <string name="nav_epg_Thursday">Thursday</string>
    <string name="nav_epg_Friday">Friday</string>
    <string name="nav_epg_Saturday">Saturday</string>
    <string name="nav_epg_Sun">Sun</string>
    <string name="nav_epg_Mon">Mon</string>
    <string name="nav_epg_Tue">Tue</string>
    <string name="nav_epg_Wed">Wed</string>
    <string name="nav_epg_Thur">Thur</string>
    <string name="nav_epg_Fri">Fri</string>
    <string name="nav_epg_Sat">Sat</string>
    <string name="nav_MOVIE">Movie/Drama</string>
    <string name="nav_NEWS">News/Current affairs</string>
    <string name="nav_SHOW">Show/Game show</string>
    <string name="nav_SPORTS">Sports</string>
    <string name="nav_Sports">sports (general)</string>
    <string name="nav_CHILDRENS">Children\'s/Youth programmes</string>
    <string name="nav_MUSIC">Music/Ballet/Dance</string>
    <string name="nav_ARTS">Arts/Culture (without music)</string>
    <string name="nav_SOCIAL">Social/Political issues/Economics</string>
    <string name="nav_EDUCATION">Education/Science/Factual topics</string>
    <string name="nav_LEISURE">Leisure hobbies</string>
    <string name="nav_SPECIAL">Special characteristics</string>
    <string name="nav_CHILDREN">CHILDREN</string>
    <string name="nav_EROTIC">EROTIC</string>
    <string name="nav_RA_TE_SA_PR">RA_TE_SA_PR</string>
    <string name="nav_DEBATE_INTERVIEW">DEBATE_INTERVIEW</string>
    <string name="nav_OTHER">OTHER</string>
    <string name="nav_ENTERTAINMENT">ENTERTAINMENT</string>
    <string name="nav_CURRENT_AFFAIRS">CURRENT AFFAIRS</string>
    <string name="nav_INFOTAINMENT">INFOTAINMENT</string>
    <string name="nav_COMEDY">COMEDY</string>
    <string name="nav_DRAMA">DRAMA</string>
    <string name="nav_DOCUMENTARY">DOCUMENTARY</string>
    <string name="nav_NEWS_AND_FACTUAL">NEWS AND FACTUAL</string>
    <string name="nav_SPORT">SPORT</string>
    <string name="nav_LIFESTYLE">LIFESTYLE</string>
    <string name="nav_SOAP_OPERA">SOAP_OPERA</string>
    <string name="nav_MINI_SERIES">MINI_SERIES</string>
    <string name="nav_SERIES">SERIES</string>
    <string name="nav_VARIETY">VARIETY</string>
    <string name="nav_REALITY_SHOW">REALITY_SHOW</string>
    <string name="nav_INFORMATION">INFORMATION</string>
    <string name="nav_COMICAL">COMICAL</string>
    <string name="nav_Drama">movie/drama (general)</string>
    <string name="nav_Detective">detective/thriller</string>
    <string name="nav_Adventure">adventure/westem/war</string>
    <string name="nav_Science_Fiction">science fiction/fantasy/horror</string>
    <string name="nav_Comedy">comedy</string>
    <string name="nav_Soap">soap/melodrama/folkloric</string>
    <string name="nav_Romance">romance</string>
    <string name="nav_Serious">serious/classical/religious/historical movie/drama</string>
    <string name="nav_Serious_Music">serious music/classical music</string>
    <string name="nav_Adult_Movie">adult movie/drama</string>
    <string name="nav_Current_Affairs">news/current affairs (general)</string>
    <string name="nav_Weather_Report">news/weather report</string>
    <string name="nav_News_Magazine">news magazine</string>
    <string name="nav_Documentary">documentary</string>
    <string name="nav_Discussion">discussion/interview/debate</string>
    <string name="nav_News">News</string>
    <string name="nav_Report">Report</string>
    <string name="nav_Biography">Biography</string>
    <string name="nav_Show">show/game show (general)</string>
    <string name="nav_Game_Show">game show/quiz/contest</string>
    <string name="nav_Variety_Show">variety show</string>
    <string name="nav_Talk_Show">talk show</string>
    <string name="nav_Special_Events">special events (Olympic Games,World Cup,etc.)</string>
    <string name="nav_Sports_Magazines">sports magazines</string>
    <string name="nav_Football">football/soccer</string>
    <string name="nav_Tennis">tennis/squash</string>
    <string name="nav_Team_Sports">team sports (excluding football)</string>
    <string name="nav_Athletics">athletics</string>
    <string name="nav_Motor_Sport">motor sport</string>
    <string name="nav_Water_Sport">water sport</string>
    <string name="nav_Winter_Sport">winter sports</string>
    <string name="nav_Equestrian">equestrian</string>
    <string name="nav_Martial_Sports">martial sports</string>
    <string name="nav_Children">children\'s/youth programmes</string>
    <string name="nav_Preschool_children">pre-school children\'s programmes</string>
    <string name="nav_Entertainment_for_6_to_14">entertainment programmes for 6 to 14</string>
    <string name="nav_Entertainment_for_10_to_16">entertainment programmes for 10 to 16</string>
    <string name="nav_Informational">informational/educational/school programmes</string>
    <string name="nav_Cartoons">cartoons/puppets</string>
    <string name="nav_Music">music/ballet/dance (general)</string>
    <string name="nav_Rock">rock/pop</string>
    <string name="nav_Folk">folk/traditional music</string>
    <string name="nav_Jazz">jazz</string>
    <string name="nav_Musical">musical/opera</string>
    <string name="nav_Ballet">ballet</string>
    <string name="nav_Arts">arts/culture (without music)</string>
    <string name="nav_Performing_Arts">performing arts</string>
    <string name="nav_Fine_Arts">fine arts</string>
    <string name="nav_Religion">religion</string>
    <string name="nav_Popular_culture">popular culture/traditional arts</string>
    <string name="nav_Literature">literature</string>
    <string name="nav_Film">film/cinema</string>
    <string name="nav_Experimental">experimental film/video</string>
    <string name="nav_Broadcasting">broadcasting/press</string>
    <string name="nav_Live_Broadcast">live broadcast</string>
    <string name="nav_New_Media">new media</string>
    <string name="nav_Arts_magazines">arts magazines</string>
    <string name="nav_Fashion">fashion</string>
    <string name="nav_Reject">Reject</string>
    <string name="nav_Social">social/political issues/economics (general)</string>
    <string name="nav_Magazines">magazines/reports/documentary</string>
    <string name="nav_Economics">economics/social advisory</string>
    <string name="nav_Remarkable_people">remarkable people</string>
    <string name="nav_Education">education/science/factual topics (general)</string>
    <string name="nav_Nature">nature/animals/environment</string>
    <string name="nav_Technology">technology/nature sciences</string>
    <string name="nav_Medicine">medicine/physiology/psychology</string>
    <string name="nav_Foreign_Countries">foreign countries/expeditions</string>
    <string name="nav_Social_sciences">social/spiritual sciences</string>
    <string name="nav_Further_Education">further education</string>
    <string name="nav_Languages">languages</string>
    <string name="nav_Educative">Educative</string>
    <string name="nav_Soap_opera">Soap Opera</string>
    <string name="nav_Miniseries">Mini-series</string>
    <string name="nav_Series">Series</string>
    <string name="nav_Auditorium">Auditorium</string>
    <string name="nav_Making_of">Making of</string>
    <string name="nav_Feminine">Feminine</string>
    <string name="nav_Game_show">Game Show</string>
    <string name="nav_Reality_show">Reality Show</string>
    <string name="nav_Cooking">Cooking</string>
    <string name="nav_Country">Country</string>
    <string name="nav_Health">Health</string>
    <string name="nav_Travel">Travel</string>
    <string name="nav_Comical">Comical</string>
    <string name="nav_Erotic">Erotic</string>
    <string name="nav_Movie">Movie</string>
    <string name="nav_Raffle">Raffle</string>
    <string name="nav_Television_sales">Television Sales</string>
    <string name="nav_Prizing">Prizing</string>
    <string name="nav_Interview">Interview</string>
    <string name="nav_Adult_cartoon">Adult Cartoon</string>
    <string name="nav_Interactive">Interactive</string>
    <string name="nav_Policy">Policy</string>
    <string name="nav_Leisure_Hobbies">leisure hobbies (general)</string>
    <string name="nav_Tourism">tourism/travel</string>
    <string name="nav_Handicraft">handicraft</string>
    <string name="nav_Motoring">motoring</string>
    <string name="nav_Fitness_and_Health">fitness and health</string>
    <string name="nav_Advertisement">advertisement/shopping</string>
</resources>