<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="45dp"
    android:nextFocusDown="@id/epg_main_chanel_list"
    android:background="@mipmap/background"
    tools:context=".MainActivity">

    <include android:id="@+id/epg_main_head"
        layout="@layout/epg_main_head"/>



    <!-- for channel list -->

    <RelativeLayout
        android:id="@+id/epg_home_channel_ly"
        android:layout_width="359dp"
        android:layout_height="@dimen/list_rl_h"
        android:layout_below="@+id/epg_main_head"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">


        <View
            android:layout_width="@dimen/line_w"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:background="@color/color_line" />



        <TextView
            android:id="@+id/epg_home_channel_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_date_title_h"
            android:gravity="center"
            android:text="@string/channel_list_name"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_w"
            android:layout_below="@+id/epg_home_channel_title"
            android:background="@color/color_line" />

        <ListView
            android:id="@+id/epg_main_chanel_list"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_view_h"
            android:layout_below="@+id/epg_home_channel_title"
            android:divider="@null"
            android:listSelector="@drawable/selector_list_item"
            android:scrollbars="none" />

        <View
            android:layout_width="@dimen/line_w"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:background="@color/color_line" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_w"
            android:background="@color/color_line" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_w"
            android:layout_alignParentBottom="true"
            android:background="@color/color_line" />
    </RelativeLayout>

    <!-- for epgInfos lists -->

    <RelativeLayout
        android:id="@+id/epg_home_pros_ly"
        android:layout_width="828dp"
        android:layout_height="427dp"
        android:layout_below="@+id/epg_main_head"
       android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/epg_home_channel_ly"
        android:orientation="horizontal" >

        <include
            android:id="@+id/include_epgs_ly"
            layout="@layout/epg_home_epgs_ly" />

        <RelativeLayout
            android:id="@+id/epg_home_epgs_loading_ly"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#AA000000"
            android:visibility="gone" >

            <ImageView
                android:id="@+id/epg_home_epgs_loading_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@mipmap/ic_loading_128" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/epg_home_epgs_loading_img"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/str_loading_title"
                android:textColor="@android:color/white"
                android:textSize="25sp" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/im_bottom_record"
            android:layout_width="33dp"
            android:layout_height="9dp"
            android:layout_marginStart="13dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_bottom_record" />

        <TextView
            android:id="@+id/tv_bottom_record"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="7dp"
            android:gravity="center_vertical"
            android:layout_toRightOf="@id/im_bottom_record"
            android:text="@string/str_bottom_record"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/im_bottom_remind"
            android:layout_width="33dp"
            android:layout_height="9dp"
            android:layout_marginStart="20dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_bottom_record"
            android:src="@mipmap/ic_bottom_reminder" />

        <TextView
            android:id="@+id/tv_bottom_remind"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="7dp"
            android:gravity="center_vertical"
            android:layout_toRightOf="@id/im_bottom_remind"
            android:text="@string/str_bottom_reminder"
            android:textColor="@color/white"
            android:textSize="15sp" />


        <ImageView
            android:id="@+id/im_bottom_reminding"
            android:layout_width="13dp"
            android:layout_height="15dp"
            android:layout_marginRight="7dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/tv_bottom_reminding"
            android:src="@mipmap/ic_bottom_remindering" />

        <TextView
            android:id="@+id/tv_bottom_reminding"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="13dp"
            android:text="@string/str_bottom_reminding"
            android:textColor="@color/white"
            android:textSize="15sp" />


        <ImageView
            android:id="@+id/im_bottom_recording"
            android:layout_width="20dp"
            android:layout_height="13dp"
            android:layout_marginRight="7dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/tv_bottom_recording"
            android:src="@mipmap/ic_bottom_recording" />

        <TextView
            android:id="@+id/tv_bottom_recording"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginRight="27dp"
            android:layout_toLeftOf="@id/im_bottom_reminding"
            android:text="@string/str_bottom_recording"
            android:textColor="@color/white"
            android:textSize="15sp" />


        <ImageView
            android:id="@+id/im_bottom_playing"
            android:layout_width="15dp"
            android:layout_height="16dp"
            android:layout_marginRight="7dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/tv_bottom_playing"
            android:src="@mipmap/ic_bottom_playing" />

        <TextView
            android:id="@+id/tv_bottom_playing"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginRight="27dp"
            android:layout_toLeftOf="@id/im_bottom_recording"
            android:text="@string/str_bottom_playing"
            android:textColor="@color/white"
            android:textSize="15sp" />


    </RelativeLayout>


</RelativeLayout>